# simple-code-cli

./: .env.example  .gitignore  README.md  pyproject.toml
simple_code_cli/: app.py  config.py  prompts.py  tool_calls.py
simple_code_cli/tools/: __init__.py  base.py  bash.py  edit_file.py  list_files.py  read_file.py  registry.py  ripgrep.py  web_search.py
